package api.validation

case class ValidationError(message: String)
