package domain.core.credit_card

case class CreditCard(number: String)
